<resources>
    <string name="app_name">ParkingApp</string>

    <string name="title_app_motos">Motocicleta</string>
    <string name="title_app_car">Carros</string>
    <string name="title_app">Parking APP</string>
    <string name="enter_plate">Ingrese la Placa </string>
    <string name="enter">Registrar </string>
    <string name="bill">Facturar </string>
    <string name ="enter_cilindraje">Ingrese el cilindraje</string>

</resources>
